# chat-room-for-bitrix24

./: .gitignore  MIGRATION_README.md  README.md  TODO.md  architecture.md  env.example  example.curl  example_webhook_client_message.curl  migration_add_telegram_user_fields.py  pyproject.toml  run_migration.sh  test.py  timezone_example.txt
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py  deps.py  router.py
app/api/endpoints/: auth.py  chats.py  events.py  messages.py  system.py  webhook.py  workBitrix.py
app/bot/: __init__.py  bot.py
app/bot/handlers/: __init__.py  command.py  message.py
app/bot/middleware/: __init__.py  db.py
app/core/: auth.py  events.py  security.py
app/crud/: base.py  chat.py  event.py  message.py  user.py
app/models/: __init__.py  base.py  chat.py  event.py  message.py  user.py
app/schemas/: __init__.py  chat.py  event.py  message.py  user.py  webhook.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  index.html
app/templates/auth/: login.html
app/templates/chats/: detail.html  list.html
app/templates/settings/: events.html
app/utils/: timezone.py
